--- a/package.json
+++ b/package.json
@@ -13,15 +13,22 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^4.2.4",
+    "@angular/cdk": "^2.0.0-beta.8",
     "@angular/common": "^4.2.4",
     "@angular/compiler": "^4.2.4",
     "@angular/core": "^4.2.4",
     "@angular/forms": "^4.2.4",
     "@angular/http": "^4.2.4",
+    "@angular/material": "^2.0.0-beta.8",
     "@angular/platform-browser": "^4.2.4",
     "@angular/platform-browser-dynamic": "^4.2.4",
     "@angular/router": "^4.2.4",
+    "@ngrx/effects": "^4.0.2",
+    "@ngrx/router-store": "^4.0.2",
+    "@ngrx/store": "^4.0.2",
+    "@ngrx/store-devtools": "^4.0.0",
     "core-js": "^2.4.1",
+    "moment": "^2.18.1",
     "rxjs": "^5.4.2",
     "zone.js": "^0.8.14"
   },
