partly add diary module

--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@ngrx/store": "^4.0.2",
     "@ngrx/store-devtools": "^4.0.0",
     "core-js": "^2.4.1",
+    "markdown-js": "0.0.3",
     "moment": "^2.18.1",
     "rxjs": "^5.4.2",
     "zone.js": "^0.8.14"
