--- a/package.json
+++ b/package.json
@@ -27,7 +27,10 @@
     "@ngrx/router-store": "^4.0.2",
     "@ngrx/store": "^4.0.2",
     "@ngrx/store-devtools": "^4.0.0",
+    "angularfire2": "^4.0.0-rc.2",
     "core-js": "^2.4.1",
+    "firebase": "^4.2.0",
+    "hammerjs": "^2.0.8",
     "markdown-js": "0.0.3",
     "moment": "^2.18.1",
     "rxjs": "^5.4.2",
